# modem

./: .gitignore  .secrets-exemplo.toml  README.md  modem.py  modem_uteis.py  pyproject.toml  requirements.txt  settings-exemplo.toml  verifica_modem-timlive.py
