[tool.poetry]
name = "modem"
version = "0.1.0"
description = "Verifica velocidade do modem"
authors = ["Leandro Costa <lscosta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
dynaconf = "^3.1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
